# RoboInternship

./: CP6000 Software.odt  README.md  VariablerVijeo.docx  cant fix these warnings rn.txt  code changes for compilation.txt
CP6000/: KassePakker(CP6000).sh  mntdatabase.txt
CP6000/code/bxbuilder/bxbuilder/: .cvsignore  Makefile  Makefile.am  Makefile.in  bxbuilder.cpp  bxbuilder.h  bxbuilder.ii  bxbuilderdoc.cpp  bxbuilderdoc.h  bxbuilderview.cpp  bxbuilderview.h  bxdialoglistview.cpp  bxdialoglistview.h  generadlg.cpp  generadlg.h  generate.cpp  generate.h  generate.ui  gmon.out  lms.bxp  main.cpp
CP6000/code/bxbuilder/bxbuilder/CVS/: Entries  Entries.Extra  Entries.Extra.Old  Entries.Old  Repository
CP6000/code/laserview/laserview/: Makefile  Makefile.am  Makefile.in  cammain.c  lv.h  main.c  savedib.c  servermain.c  upldForm.c  webmain.c
CP6000/code/laserview/laserview/.deps/: cammain.Po  main.Po  savedib.Po  servermain.Po  upldForm.Po  webmain.Po
CP6000/code/laserview/laserview/.deps/CVS/: Entries  Entries.Extra  Repository
CP6000/code/laserview/laserview/CVS/: Entries  Entries.Extra  Entries.Extra.Old  Entries.Old  Repository
CP6000/code/laserview/laserview/docs/: Makefile  Makefile.in
CP6000/code/laserview/laserview/docs/CVS/: Entries  Entries.Old  Repository
CP6000/code/laserview/laserview/docs/en/: Makefile  Makefile.in
CP6000/code/laserview/laserview/docs/en/CVS/: Entries.Extra  Repository
CP6000/code/laserview/laserview/templates/CVS/: Entries  Entries.Extra  Repository
CP6000/code/trio/term/term/: Makefile  Makefile.am  Makefile.in  main.c  tmceth.c  tmceth.h  tmclnx.c  tmclnx.h  tmcser.c  tmcser.h  tmcsup.h
CP6000/code/trio/term/term/.deps/: tmceth.Po  tmclnx.Po  tmcser.Po  tmcsup.Po
CP6000/code/trio/term/term/.deps/CVS/: Entries  Entries.Extra  Repository
CP6000/code/trio/term/term/CVS/: Entries  Entries.Extra  Entries.Extra.Old  Entries.Old  Repository
CP6000/code/trio/term/term/docs/: Makefile  Makefile.in
CP6000/code/trio/term/term/docs/CVS/: Entries  Entries.Extra  Entries.Old  Repository
CP6000/code/trio/term/term/docs/en/: Makefile  Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  index.sgml
CP6000/code/trio/term/term/docs/en/CVS/: Entries  Entries.Extra  Repository
CP6000/code/trio/term/term/templates/CVS/: Entries  Repository
(+4320 files in other folders)
