####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = term

## INCLUDES were found outside kdevelop specific part

term_SOURCES = main.c 
term_LDADD   = -ltmclnx

SUBDIRS = docs 

EXTRA_DIST = main.c tmclnx.h tmcsup.h tmceth.h tmcser.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
term_LDFLAGS = $(all_libraries) 
                                                                                
